--- a/index.html
+++ b/index.html
@@ -3,22 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar">
-    <na class="wrapper">
-      <div class="logo">
-        <ul>
-          <a href="#"><li>Lorem</li></a>
-          <a href="#"><li>Lorem</li></a>
-          <a href="#"><li>Lorem</li></a>
-        </ul>
-      </div>
-    </na>
-  </nav>
-  <header class="wrapper">
-    <h1>Big ol' Lorem</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ad assumenda aspernatur nihil. Quidem inventore sunt, repellat reiciendis dignissimos nesciunt est excepturi odio eaque modi sapiente, ab tempora optio.</p>
-  </header>
+  
 </body>
 </html>
+ <nav class="navBar">
+  <nav class="wrapper">
+    <div class="logo"></div>
+    <!-- Logo -->
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="label-toggle"></label>
+    </input>
+    <ul>
+      <a href="#">
+        <li>Lorem</li>
+      </a>
+      <a href="#">
+        <li>Ipsum</li>
+      </a>
+      <a href="#">
+        <li>Serum</li>
+      </a>
+    </ul>
+  </nav>
+</nav>
+<header class="wrapper">
+  <h1>Big ol' Lorem</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, sint corporis dolores omnis consectetur quaerat nesciunt beatae maiores, itaque labore ex vero pariatur nulla non fugiat, facilis eaque sunt doloremque!</p>
+</header>
